--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
-    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "^51.0.37",
     "expo-constants": "~16.0.1",
@@ -28,8 +29,8 @@
     "react-native": "^0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "^3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
     "styled-components": "^6.1.13"
